# karma1

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  CLAUDE.zh.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh.md  HANDOFF.md  PRD.md  README.en.md  README.md  README.zh.md  SECURITY.en.md  SECURITY.md  SECURITY.zh.md  pyproject.toml  whitelist.py
.github/: PULL_REQUEST_TEMPLATE.en.md
data/: config.example.yaml  rules.dev.example.yaml  rules.dev.example.zh.yaml  rules.dev.minimal.example.yaml  rules.dev.minimal.example.zh.yaml  sticky.dev.example.yaml  sticky.example.yaml
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  ARCHITECTURE.zh.md  CODEX_BACKEND.zh.md  HANDOFF.md  HANDOFF.zh.md  HOOK_CONFIGURATION_GUIDE.md  PRD.md  PRD.zh.md  REFACTOR_PLAN_RULE_AND_I18N.md  RULES_REDESIGN_PROPOSAL.md  V0_6_0_PLAN.md  V0_6_0_PLAN.zh.md
karma/: __init__.py  cli.py  config.py  i18n.py  locale_detect.py  model_threshold.py  notify.py  rule.py  session_state.py  sticky.py  violations.py
scripts/: record-demo.sh  verify-installed.sh
skills/: karma-rule.md
tests/: conftest.py  test_backends.py  test_bypass_karma.py  test_checks.py  test_cli.py  test_compact_hooks.py  test_config.py  test_description_context.py  test_false_negative_regression.py  test_hooks.py  test_keep_pushing.py  test_locale_detect.py  test_model_threshold.py  test_no_sticky_in_user_facing.py  test_paths.py  test_post_tool_use_reinject.py  test_pre_tool_use.py  test_protocol_adapter.py  test_session_state.py  test_sticky.py  test_subagent_isolation.py  test_violations.py
(+38 files in other folders)
