[project]
name = "karma"
version = "0.1.0"
description = "Sticky core directional preferences for Claude Code — keep Agent on track in long sessions"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "jhz" }]
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
karma = "karma.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["karma"]
artifacts = ["data/*.yaml"]

[tool.hatch.build.targets.wheel.force-include]
"data/sticky.example.yaml" = "data/sticky.example.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py311"
